Fix URL encoding for filenames with + characters, add vanilla disconnect screen support, improve mod scanning - Fix server parseQuery to handle + characters correctly (URLDecoder treats + as space) - Fix client to properly URL encode filenames with special characters - Add VanillaDisconnectedScreenMixin for registry/datapack mismatch screens - Rename DisconnectedScreenMixin to ModMismatchScreenMixin for clarity - Change ServerModScanner to key by filename instead of modId (fixes missing mods) - Add port discovery scanning (mcPort+1 to mcPort+100) - Add Skip & Continue button for download errors - Add text wrapping for error messages - Add extensive logging for debugging - Add GitHub Actions release workflow